Continue with remaining Gradle tasks even if other tasks fail
This is a Travis change which enables the `--continue` Gradle flag. When
this flag is enabled, Gradle will continue running any remaining tasks
that do not depend on the failed tasks. In a multiplatform project, this
can help show all test failures across all platforms.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
       - oracle-java8-installer # Updates JDK 8 to the latest available.
 
 script:
-  - ./gradlew clean build
+  - ./gradlew --continue clean build
 
 after_success:
   - .buildscript/deploy_snapshot.sh
